# SecTool

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  munger.html  pyproject.toml  serve.py  viewer.html
scripts/: munger_analyze.sh
sec_edgar/: cik_resolver.py  company_facts.py  config.py  http_client.py  main.py  munger_api.py  munger_worker.py  normalizer.py  storage.py  submissions.py
