[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "sec-edgar-cli"
version = "1.0.0"
description = "CLI tool for retrieving SEC EDGAR filing metadata and XBRL financial data by ticker."
requires-python = ">=3.10"
dependencies = ["requests>=2.28"]

[project.scripts]
sec-edgar = "sec_edgar.main:main"
